# YTDL_APP

./: app.py  pyproject.toml
gui/: MainWindow.py
ytdl_app/: MainWindow.py  app.py
