[tool.poetry]
name = "ytdl-app"
version = "0.1.0"
description = ""
authors = ["Sim <cyneric00@gmail.com>"]
readme = "README.md"
packages = [{include = "ytdl_app"}]

[tool.poetry.dependencies]
python = "^3.10"
pyqt5 = "^5.15.9"
yt-dlp = "^2023.6.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
